--- a/roles/basic/tasks/main.yml
+++ b/roles/basic/tasks/main.yml
@@ -18,15 +18,22 @@
 - name: Install common tools
   pacman:
     name: 
-    - i3-gaps
+    - base-devel
+    - sshd
     - rofi
     - tree
     - git
     - htop
     - neovim
-    - sxiv
-    - kitty
-    - emacs 
+    - feh
+    - ranger
     state: latest
+
+
+- name: Ensure sshd is running
+  systemd:
+    name: sshd
+    enabled: yes
+    state: started
 
 # vim: ts=2 sw=2 et :
