--- a/folly.yml
+++ b/folly.yml
@@ -1,12 +1,12 @@
 ---
-- hosts: gravity
+- hosts: folly
   become: true
   #become_user: ansible
   roles:
     - basic
-    #- desktop
-    #- arduino
-    #- stm32
-    #- dockerhost
+    - desktop
+    - arduino
+    - stm32
+    - dockerhost
   
 # vim: ts=2 sw=2 et :
