pacman cleanup and twinks

--- a/roles/basic/tasks/main.yml
+++ b/roles/basic/tasks/main.yml
@@ -17,7 +17,8 @@
 
 - name: Install common tools
   pacman:
-    name: 
+    name:
+    - pacman-contrib
     - base-devel
     - polkit
     - haveged
