network manager applet

--- a/roles/desktop/tasks/main.yml
+++ b/roles/desktop/tasks/main.yml
@@ -1,6 +1,7 @@
 - name: Install desktop
   pacman:
     name:
+    - network-manager-applet
     - ttf-inconsolata
     - ttf-linux-libertine
     - trash-cli
